seer-core/tests/snapshots/format_snapshots__human_delegation_healthy_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 581
expression: human().format_delegation(&fixture_delegation_healthy())
---
Delegation Report for [1;92mexample.com[0m

  [1;96mParent zone[0m: [97mcom[0m
  [1;96mParent servers queried[0m: [97ma.gtld-servers.net, b.gtld-servers.net[0m
  [1;96mDelegation[0m: [1;92min sync[0m

  [1;96mDelegated NS (parent view)[0m:
    [1;92m✓[0m [97mns1.example.com[0m
    [1;92m✓[0m [97mns2.example.com[0m
  [1;96mZone NS (authoritative view)[0m:
    [1;92m✓[0m [97mns1.example.com[0m
    [1;92m✓[0m [97mns2.example.com[0m
