seer-core/tests/snapshots/format_snapshots__human_dig_nodata_behind_cname_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 1374
expression: human ().format_dig (& fixture_dig_nodata_behind_cname())
---

[1;95mDNS AAAA Records: www.seer.test[0m
[37m───────────────────────────────[0m
  [1;96mstatus[0m: [1;92mNOERROR[0m  [1;96mflags[0m: [97mqr rd ra[0m  [1;96mserver[0m: [97mdefault[0m  [1;96mtime[0m: [97m12 ms[0m

  [1;96mAnswer[0m:
    [97mwww.seer.test[0m  [1;96m300[0m  [1;96mCNAME[0m  [97medge.cdn.test.[0m

  [1;93mThe CNAME target edge.cdn.test. has no AAAA records (NODATA)[0m

  [1;96mAuthority[0m:
    [97mcdn.test[0m  [1;96m900[0m  [1;96mSOA[0m  [97mns1.cdn.test. hostmaster.cdn.test. 2026092801 7200 3600 1209600 900[0m

[1;93mNote: DNS responses are not DNSSEC-validated[0m
