seer-core/tests/snapshots/format_snapshots__human_dig_nxdomain_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: human ().format_dig (& fixture_dig_nxdomain())
---

[1;95mDNS A Records: gone.seer.test[0m
[37m─────────────────────────────[0m
  [1;96mstatus[0m: [1;93mNXDOMAIN[0m  [1;96mserver[0m: [97mdefault[0m  [1;96mtime[0m: [97m31 ms[0m

  [1;93mName does not exist (NXDOMAIN)[0m

  [1;96mAuthority[0m:
    [97mseer.test[0m  [1;96m900[0m  [1;96mSOA[0m  [97mns1.seer.test. hostmaster.seer.test. 2026092801 7200 3600 1209600 900[0m

[1;93mNote: DNS responses are not DNSSEC-validated[0m
